--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -13,7 +13,10 @@
 
             <p class="post-metadata">
                 <span class="metadata"><i class="fa fa-calendar"></i> {{ post.publishedAt|localizeddate('long', 'medium', null, 'UTC') }}</span>
-                <span class="metadata"><i class="fa fa-user"></i> {{ post.author.fullName }}</span>
+                <span class="metadata">
+                    <i class="fa fa-user"></i> {{ post.author.fullName }}
+                    [<span class="email">{{ post.author.email }}</span>]
+                </span>
             </p>
 
             {{ post.summary|md2html }}
